fixing the spacing for links at bottom and for archive links as well, especially on mobile (tiny phones)

--- a/css/style.css
+++ b/css/style.css
@@ -129,11 +129,13 @@ footer {
   width: 30%;
 }
 .icon {
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-bottom: 5px;
+  margin-left: 7px;
+  margin-right: 7px;
 }
 p.archive {
     text-indent: 0px;
+    text-align: initial;
 }
 a.nav:link {
   color: white;
